@@ -1,7 +1,7 @@
 CMF 1.5.0-beta (unreleased)
 
   New Features
-  
+
     - CookieCrumber now supports logging the authenticated user id to
       the access log just like basic auth.
 
@@ -9,13 +9,16 @@ CMF 1.5.0-beta (unreleased)
 
     - DiscussionTool: Fixed two acquisition bugs.
       (Collector #119 and #201)
-    
+
     - Change default CookieCrumbler Cache-Control header value from
       "no-cache" to "private" to allow browser caches to cache cookie
       authenticated pages but not proxies and HTTP accellerators.
 
     - ActionInformation: Correctly store an empty tuple for permissions
       if no permission is given (Collector #242).
+
+    - DublinCore: Use a default ceiling date that is parsable by
+      DateIndex (Collector #132).
 
 CMF 1.5.0-alpha (2004/07/09)
 
